# templates.django_api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
.docker/: entrypoint.sh
templates__django_api/: asgi.py  settings.py  urls.py  wsgi.py
